--- a/index.html
+++ b/index.html
@@ -11,13 +11,17 @@
     <form>
         <label for="first-name">First Name: </label>
         <input type="text" id="first-name">
-        <span>*</span>
+        <span data-required>*</span>
         <br>
 
         <label for="last-name">Last Name: </label>
         <input type="text" id="last-name">
-        <span>*</span>
+        <span data-required>*</span>
         <br>
+
+        <label for="dob">Date of Birth: </label>
+        <input type="text">
+        <span></span>
 
         <button type="button">Register</button>
     </form>
