Added DOB validation

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <br>
 
         <label for="dob">Date of Birth: </label>
-        <input type="text">
+        <input id="dob" type="text">
         <span></span>
         <br>
 
